--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -1,3 +1,10 @@
 body{
   background-color: #333;
 }
+#facebook {
+
+	margin-left: 20px;
+	overflow: hidden;
+	border: 2px solid #000;
+	border-radius: 10px;
+}
