added coke image

--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -8,8 +8,9 @@ body{
 	border: 2px solid #000;
 	border-radius: 10px;
 }
-#facebook-container h2 {
-	color: #E61E2B;
-	margin-left: 120px;
-	
+#facebook-container img {
+	max-width: 20%;
+	display: inherit;
+	margin-left: 55px;
+	border-radius: 100px;
 }
