--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -9,8 +9,8 @@ body{
 	border-radius: 10px;
 }
 #facebook-container img {
-	max-width: 20%;
+	width: 400px;
 	display: inherit;
-	margin-left: 55px;
+	margin-left: 20px;
 	border-radius: 100px;
 }
