--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,8 @@ body {
 
 /* line 11, ../compass/sass/styles.scss */
 #facebook-container img {
-  max-width: 20%;
+  width: 400px;
   display: inherit;
-  margin-left: 55px;
+  margin-left: 20px;
   border-radius: 100px;
 }
