--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -1,16 +1,16 @@
-body{
-  background-color: #333;
-}
-#facebook {
+// body{
+//   background-color: #333;
+// }
+// #facebook {
 
-	margin-left: 20px;
-	overflow: hidden;
-	border: 2px solid #000;
-	border-radius: 10px;
-}
-#facebook-container img {
-	width: 400px;
-	display: inherit;
-	margin-left: 20px;
-	border-radius: 100px;
-}
+// 	margin-left: 20px;
+// 	overflow: hidden;
+// 	border: 2px solid #000;
+// 	border-radius: 10px;
+// }
+// #facebook-container img {
+// 	max-width: 1400px;
+// 	display: block;
+// 	margin-left: 20px;
+// 	border-radius: 100px;
+// }
